mdapipkg/unpackaged/objects/Learning_plan__c.object
<CustomObject>
    <fields>
        <fullName>Code__c</fullName>
        <label>Code</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LearningPlanExId__c</fullName>
        <externalId>true</externalId>
        <label>LearningPlanExId</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Number_of_Courses__c</fullName>
        <label>Number of Courses</label>
        <summaryForeignKey>LearningPlanCourse__c.LearningPlan__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>LearningPlan</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>New_LearningPlans_View</fullName>
        <columns>NAME</columns>
        <columns>Name__c</columns>
        <columns>Code__c</columns>
        <columns>Description__c</columns>
        <columns>Number_of_Courses__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>New LearningPlans View</label>
    </listViews>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>LearningPlanId</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>LearningPlans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>